--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <p><b>Going Deeper with Semantics: Exploiting Semantic Contextualization for Interpretation of Human Activity in Videos</b><br>
                         Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
                         <i>Winter Conference on Applications of Computer Vision</i>.
-      <b><i>  </i></b> <a href="files/S<!-- a -->akur_WACV2019.pdf">[pdf]</a><br>
+      <!-- <b><i>  </i></b> <a href="files/Saakur_WACV2019.pdf">[pdf]</a><br> -->
                         </p>
                   </li>
 
