--- a/index.html
+++ b/index.html
@@ -139,33 +139,25 @@
                         <i>IEEE Computer Society Annual Symposium on VLSI (ISVLSI), 2019</i>.
                         </p>
                   </li>
-      <li>
-                        <p><b> A Perceptual Prediction Framework for Self Supervised Event Segmentation</b><br>
-                        Sathyanarayanan Aakur, Sudeep Sarkar<br>
-                        <i>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019</i>.
-      <!-- <b><i>  </i></b> <a href="https://arxiv.org/pdf/1811.04869.pdf">[pdf]</a><br> -->
-                        </p>
-                  </li>
-		  <li>
+      
+       <li>
                         <p><b> Fine-grained Action Detection in Long Surveillance Videos</b><br>
                         Sathyanarayanan Aakur, Daniel Sawyer, Sudeep Sarkar<br>
-                        <i>Workshop on Human Activity Detection in Multi-Camera, Continuous, Long-Duration Video (HADCV'19), Winter Conference on Applications of Computer Vision</i>.
-      <!-- <b><i>  </i></b> <a href="#files/Saakur_HADCV2019.pdf">[pdf]</a><br> -->
+                        <i>Workshop on Human Activity Detection in Multi-Camera, Continuous, Long-Duration Video (HADCV'19), Winter Conference on Applications of Computer Vision (WACV), Waikoloa Village, Hawaii</i> <a href="#files/"></a>[pdf](Coming Soon!)
                         </p>
                   </li>
       <li>
                         <p><b>Going Deeper with Semantics: Exploiting Semantic Contextualization for Interpretation of Human Activity in Videos</b><br>
                         Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
-                        <i>Winter Conference on Applications of Computer Vision</i>.
-      <!-- <b><i>  </i></b> <a href="files/Saakur_WACV2019.pdf">[pdf]</a><br> -->
+                        <i>Winter Conference on Applications of Computer Vision (WACV), Waikoloa Village, Hawaii</i> <a href="https://arxiv.org/abs/1708.03725">[pdf]</a><br>
                         </p>
                   </li>
 
       <li>
                         <p><b>Generating Open World Descriptions of Video using Commonsense Knowledge in a Pattern Theory Framework</b><br>
                         Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
-                        <i>Quarterly of Applied Mathematics</i>.
-                        <!-- <a href="files/Saakur_QAM2019.pdf">[pdf]</a><br> -->
+                        <i>Quarterly of Applied Mathematics</i>, 2019
+                        <a href="https://www.ams.org/journals/qam/0000-000-00/S0033-569X-2019-01530-5/">[pdf]</a><br>
                         </p>
                   </li>
 
@@ -180,8 +172,8 @@
       <li>
                         <p><b>On the Inherent Explainability of Pattern Theory-based Video Event Interpretations</b><br>
                         Sathyanarayanan Aakur, Fillipe de Souza, Sudeep Sarkar<br>
-                        Book Chapter, <i>Explainable and Interpretable Models in Computer Vision and Machine Learning in the Springer Series on Challenges in Machine Learning</i>.
-                        <!-- <a href="files/Saakur_XCVML19.pdf">[pdf]</a><br> -->
+                        Book Chapter, <i>Explainable and Interpretable Models in Computer Vision and Machine Learning in the Springer Series on Challenges in Machine Learning</i>, 2019
+                        <a href="https://link.springer.com/chapter/10.1007/978-3-319-98131-4_11">[pdf]</a><br>
                         </p>
                   </li>
 
@@ -190,17 +182,18 @@
                         <p><b>An Inherently Explainable Model for Video Activity Interpretation</b><br>
                         Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
                         <i>AAAI Workshop On Reasoning and Learning for Human-Machine Dialogues (DEEP-DIAL18)</i>, February 2018.
-			<!-- <b><i> (oral) </i></b> <a href="files/Saakur_AAAI17.pdf">[pdf]</a><br> -->
+                        <a href="https://aaai.org/ocs/index.php/WS/AAAIW18/paper/view/16704">[pdf]</a><br>
                         </p>
                   </li>
 
-		  <li>
-			<p><b>Towards a Knowledge-based approach for Generating Video Descriptions</b><br>
-			Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
-			In Proceedings of the <i>Conference on Computer and Robot Vision</i>, Edmonton, Alberta, Canada, May 2017.
-			<!-- <b><i> (oral) </i></b><a href="files/Saakur_CRV17.pdf">[pdf]</a> <a href="files/Saakur_CRV_Presentation.pptx">[slides]</a><br> -->
-			</p>
-		  </li>	
+      <li>
+                  <p><b>Towards a Knowledge-based approach for Generating Video Descriptions</b><br>
+                  Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
+                  In Proceedings of the <i>Conference on Computer and Robot Vision</i>, Edmonton, Alberta, Canada, May 2017.
+                  <a href="files/Saakur_CRV17.pdf">[pdf]</a><br>
+                  </p>
+      </li> 
+      
 		  <li><p><b>Real Time Data Acquisition System for Production Report Generation</b><br>
                       Sathyanarayanan Aakur, Mithun Singh<br>
                       In Proceedings of the <i> International Conference on Computational Intelligence and Advanced Manufacturing Research (ICCIAMR'13)</i>, Chennai, India, April 2013.<br>
