--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
                         <i>IEEE Computer Society Annual Symposium on VLSI (ISVLSI), 2019</i>.
                         </p>
                   </li>
+      <li>
+                        <p><b> A Perceptual Prediction Framework for Self Supervised Event Segmentation</b><br>
+                        Sathyanarayanan Aakur, Sudeep Sarkar<br>
+                        <i>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), Long Beach, CA</i> 
+      <b><i>  </i></b> <a href="https://arxiv.org/pdf/1811.04869.pdf">[pdf]</a><br>
+                        </p>
+	  </li>
+
       
        <li>
                         <p><b> Fine-grained Action Detection in Long Surveillance Videos</b><br>
