--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <p><b> A Perceptual Prediction Framework for Self Supervised Event Segmentation</b><br>
                         Sathyanarayanan Aakur, Sudeep Sarkar<br>
                         <i>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), Long Beach, CA</i> 
-      <b><i>  </i></b> <a href="https://arxiv.org/pdf/1811.04869.pdf">[pdf]</a><br>
+      <b><i>  </i></b> <a href="https://arxiv.org/pdf/1811.04869.pdf">[pdf]</a> <b><i>  </i></b> <a href="https://cvprusftampa.github.io/EventSegmentation/">[Project Page]</a> <br>
                         </p>
 	  </li>
 
