--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <li>
                         <p><b> A Perceptual Prediction Framework for Self Supervised Event Segmentation</b><br>
                         Sathyanarayanan Aakur, Sudeep Sarkar<br>
-                        <i>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), Long Beach, CA</i> 
+                        <i>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019</i> 
       <b><i>  </i></b> <a href="https://arxiv.org/pdf/1811.04869.pdf">[pdf]</a> <b><i>  </i></b> <a href="https://cvprusftampa.github.io/EventSegmentation/">[Project Page]</a> <br>
                         </p>
 	  </li>
