--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
 
         </tr>
 	<tr>
-		<div class="news">
-			I am looking for highly motivated graduate students with a strong mathematical foundation (especially linear algebra and probability theory) and strong coding skills. Preferably interested in computer vision and/or its grounded applications in natural language processing and robotics. Some background in machine learning, deep learning and computer vision would be useful. I also work with undergraduate students (esp. if you are already at Oklahoma State University). We highly encourage diversity! Send me an email with your CV and area of interest to further proceed.
-		</div>
+		<td colspan="2">
+			<div class="news">
+				I am looking for highly motivated graduate students with a strong mathematical foundation (especially linear algebra and probability theory) and strong coding skills. Preferably interested in computer vision and/or its grounded applications in natural language processing and robotics. Some background in machine learning, deep learning and computer vision would be useful. I also work with undergraduate students (esp. if you are already at Oklahoma State University). We highly encourage diversity! Send me an email with your CV and area of interest to further proceed.
+			</div>
+		</td>
 	</tr>
         <tr>
            <td colspan="2">
