--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
              <p>
                 saakur (at) mail (dot) usf (dot) edu
 		<br>
-		[<a href="./files/Saakur_CV.pdf">CV</a>] [<a href="https://www.linkedin.com/in/sathyanarayanan-aakur-926b35a1"> LinkedIn </a>]
+		[<a href="./files/Saakur_CV.pdf">CV</a>] [<a href="https://www.linkedin.com/in/sathyanarayanan-aakur-926b35a1"> LinkedIn </a>] [<a href="https://twitter.com/saakur3"> Twitter </a>]
               </p>
             </contact>
            </td>
