--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
         </tr>
 	<tr>
-		<td>
-			<p>
+		<td  colspan="2">
+			<p  align="justify">
 		I am an Assistant Professor of <a target='_blank' href='https://cs.okstate.edu'>Computer Science</a> at <a target='_blank' href='https://okstate.edu'>Oklahoma State University</a>. In my research, I’m broadly interested in the intersection of computer vision, natural language processing and psychology: I aim to build intelligent agents that understand the visual world beyond recognition (labels) or captions (sentences) without the need for explicit human supervision through expensive annotations. This entails developing approaches that do things such as:
 		<ul>
 			<li>self-supervised predictive learning for video event segmentation</li>
@@ -71,10 +71,10 @@
 
 		</ul>
 	</p>
-	<p>
+	<p  align="justify">
 		Much of my group's current work focuses on analyzing, modeling, and synthesizing complex video scenes and the semantic structure that can describe them.
 	</p>
-	<p>
+	<p  align="justify">
 		I received my PhD from <a target='_blank' href='https://usf.edu'>University of South Florida</a>, where I worked with <a target='_blank' href='http://www.cse.usf.edu/~sarkar/SudeepSarkar/About_Me.html'>Dr. Sudeep Sarkar</a> in the <a target='_blank' href='http://www.eng.usf.edu/cvprg/index.html'>Computer Vision and Pattern Recognition Group</a> and with <a target='_blank' href='http://uweb.cas.usf.edu/~malmberg/homepage.htm'>Dr. Kenneth Malmberg</a>. I received my Master's degree in Management Information Systems from the <a target='_blank' href="https://www.usf.edu/business/"> Muma College of Business at the University of South Florida</a> and my undergraduate degree in Electronics and Communication Engineering from Velammal Engineering College, Anna University, India.
 	</p>
 </div>
