--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
         </tr>
 	<tr>
+		<h1>Bio</h1>
 		<td  colspan="2">
 			<p  align="justify">
 		I am an Assistant Professor of <a target='_blank' href='https://cs.okstate.edu'>Computer Science</a> at <a target='_blank' href='https://okstate.edu'>Oklahoma State University</a>. In my research, I’m broadly interested in the intersection of computer vision, natural language processing and psychology: I aim to build intelligent agents that understand the visual world beyond recognition (labels) or captions (sentences) without the need for explicit human supervision through expensive annotations. This entails developing approaches that do things such as:
