--- a/index.html
+++ b/index.html
@@ -99,9 +99,12 @@
 		    I am looking for highly motivated graduate students with a strong mathematical foundation (especially linear algebra and probability theory) and strong coding skills. Preferably interested in computer vision and/or its grounded applications in natural language processing and robotics. Some background in machine learning, deep learning and computer vision would be useful. I also work with undergraduate students (esp. if you are already at Oklahoma State University). We highly encourage diversity! Send me an email with your CV and area of interest to further proceed.
 		    </p>
             <ul>
-               <li>
-                May 2019: I have accepted a position as Assistant Professor at <a href="http://cs.okstate.edu/">Oklahoma State University</a>! Exciting times ahead!
-              </li>
+		    <li> 
+		    		September 2019: One paper accepted at IFIP IoT on Latent Space modeling for PUF encrypted PUF security!
+		    </li>
+		    <li>
+                		May 2019: I have accepted a position as Assistant Professor at <a href="http://cs.okstate.edu/">Oklahoma State University</a>! Exciting times ahead!
+		    </li>
                <li>
                 May 2019: Successfully defended my dissertation!
               </li>
