--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
 			<li> generative modeling for building knowledge from the ground-up</li>
 
 		</ul>
+		
 	</p>
 	<p  align="justify">
-		Much of my group's current work focuses on analyzing, modeling, and synthesizing complex video scenes and the semantic structure that can describe them.
+		Much of my group's current work focuses on analyzing, modeling, and synthesizing complex video scenes and the semantic structure that can describe them. I also work on applying machine learning to other domains such as IoT security and running deep learning algorithms on constrained platforms like FPGA.
 	</p>
 	<p  align="justify">
 		I received my PhD from <a target='_blank' href='https://usf.edu'>University of South Florida</a>, where I worked with <a target='_blank' href='http://www.cse.usf.edu/~sarkar/SudeepSarkar/About_Me.html'>Dr. Sudeep Sarkar</a> in the <a target='_blank' href='http://www.eng.usf.edu/cvprg/index.html'>Computer Vision and Pattern Recognition Group</a> and with <a target='_blank' href='http://uweb.cas.usf.edu/~malmberg/homepage.htm'>Dr. Kenneth Malmberg</a>. I received my Master's degree in Management Information Systems from the <a target='_blank' href="https://www.usf.edu/business/"> Muma College of Business at the University of South Florida</a> and my undergraduate degree in Electronics and Communication Engineering from Velammal Engineering College, Anna University, India.
