--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <br>
              
              <p>
-                saakur (at) mail (dot) usf (dot) edu
+                saakurn (at) okstate (dot) edu
 		<br>
 		[<a href="./files/Saakur_CV.pdf">CV</a>] [<a href="https://www.linkedin.com/in/sathyanarayanan-aakur-926b35a1"> LinkedIn </a>] [<a href="https://twitter.com/saakur3"> Twitter </a>]
               </p>
