--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <p><b>Generating Open World Descriptions of Video using Commonsense Knowledge in a Pattern Theory Framework</b><br>
                         Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
                         <i>Quarterly of Applied Mathematics</i>, 2019
-                        <a href="https://www.ams.org/journals/qam/0000-000-00/S0033-569X-2019-01530-5/">[pdf]</a><br>
+                        <a href=files/Saakur_QAM.pdf>[pdf]</a><br>
                         </p>
                   </li>
 
