--- a/pubs.html
+++ b/pubs.html
@@ -6,8 +6,8 @@
  <meta name='og:description' content='Assistant Professor (Oklahoma State)'/>
  <meta name="robots" content="all">
  <title>Sathyanarayanan N. Aakur</title>
- <link rel="stylesheet" href="./newStyle.css">
- <link rel="stylesheet" href="./newPygments.css">
+ <link rel="stylesheet" href="./css/newStyle.css">
+ <link rel="stylesheet" href="./css/newPygments.css">
 </head>
 
 <body>
