--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ My group is supported by the following:
 <li class="packed">Video Event Understanding with Pattern Theory. Robotics Technical Seminar Series, Department of Mechanical Engineering,University of South Florida. Spring 2018</li>
 <li class="packed">Inherently Explainable Model for Video Activity Recognition. AAAI Workshop On Reasoningand Learning for Human-Machine Dialogues, 2018</li>
 <li class="packed">Leveraging ConceptNet to Reduce Training Requirements for Video Descriptions, Seminar in AI, University of South Florida, Spring 2017</li>
-<li class="packed">Towards a Knowledge-based Approach to Video Comprehension. Conference on Computer and Robot Vision (CRV), Sprin 2017</li> 
+<li class="packed">Towards a Knowledge-based Approach to Video Comprehension. Conference on Computer and Robot Vision (CRV), Spring 2017</li> 
 <!-- <li class="packed"></li> -->
 
 </ul>
