--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Email: saakurn -at- okstate.edu <br>
  
   <dt>Fall '19:</dt>
   <dd>
-    One paper accepted at IFIP IoT on Latent Space modeling for PUF encrypted PUF security.
+    One paper accepted at IFIP IoT on Latent Space modeling for PUF encrypted IoT Node security.
   </dd>
  
   <dt> Summer '19:</dt>
