--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@ I lead the Computer Vision and Understanding Lab</a>. Here are the current and p
 <h4>Students</h4>
 <ul>
  <li class="packed"><a href="#">Sanjoy Kundu</a>, PhD student (Spring 2020 &mdash; Present)</li> 
+  <li class="packed"><a href="#">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Present)</li> 
  <!-- <li class="packed"><a href="#">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
  <li class="packed"><a href="#">Setu Kumar Basak</a>, PhD student (Fall 2020 &mdash; Present)</li> -->
 </ul>
@@ -168,7 +169,8 @@ I lead the Computer Vision and Understanding Lab</a>. Here are the current and p
 My group is supported by the following:
 </p>
 <ul>
- <li class="packed"> OSU Core Facility Support Program</li>
+ <li class="packed"> OSU Core Facility Support Program</li> with <a href=""> Pratul Agarwal </a>
+  <li class="packed"> USDA NAHLN</li> with <a href="http://nimffab.okstate.edu/faculty-and-staff/akhilesh-ramachandran"> Akhilesh Ramachandran </a> and <a href="https://arunkumar.okstate.edu/"> Arunkumar Bagavathi </a>
 </ul>
 
 </section>
