--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ I lead the Computer Vision and Understanding Lab</a>. Here are the current and p
 My group is supported by the following:
 </p>
 <ul>
- <li class="packed"> OSU Core Facility Support Program</li> with <a href=""> Pratul Agarwal </a>
+ <li class="packed"> OSU Core Facility Support Program</li> with <a href="https://hpcc.okstate.edu/pratul_agarwal.html"> Pratul Agarwal </a>
   <li class="packed"> USDA NAHLN</li> with <a href="http://nimffab.okstate.edu/faculty-and-staff/akhilesh-ramachandran"> Akhilesh Ramachandran </a> and <a href="https://arunkumar.okstate.edu/"> Arunkumar Bagavathi </a>
 </ul>
 
