--- a/Projects/GazePrediction/index.html
+++ b/Projects/GazePrediction/index.html
@@ -167,11 +167,40 @@
 
 <p><br /></p>
 
+  <div class="sechighlight">
+<div class="container sec" style="font-size:18px">
+  <div class="row">
+
+    <div class="col-md-5">
+      <h2>Code, Paper and Extras</h2>
+      <ul>
+        <li>Find training/evaluation code on  <a href="#">Github</a> [COMING SOON!].</li>
+        <li>Find the paper <a href="https://arxiv.org/abs/2001.11580">here</a></li>
+      </ul>
+    </div>
+    <div class="col-md-7">
+      <h2>Bibtex</h2>
+<pre style="font-size:12px;">
+@misc{aakur2020unsupervised,
+    title={Unsupervised Gaze Prediction in Egocentric Videos by Energy-based Surprise Modeling},
+    author={Sathyanarayanan N. Aakur and Arunkumar Bagavathi},
+    year={2020},
+    eprint={2001.11580},
+    archivePrefix={arXiv},
+    primaryClass={cs.CV}
+}
+
+</pre>
+    </div>
+
+  </div>
+</div>
+</div>
 
       </div>
     </div>
 
-    
+    <p><br /></p>
     <script type="text/javascript" src="/static/js/jquery.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 
