--- a/pubs.html
+++ b/pubs.html
@@ -37,6 +37,11 @@
  Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
  arXiv:1909.03099, 2019. <br>
  </li>
+ <li>
+ <a href="https://arxiv.org/abs/2001.11580">Abductive Reasoning as Self-Supervision for Common Sense Question Answering</a>.<br>
+ Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
+	 arXiv:1909.03099, 2019. <a href="https://saakur.github.io/Projects/GazePrediction/">[Project Page]</a><br>
+ </li>
 
 </ul>
 <!-- My Google Scholar <a href="https://scholar.google.com/citations?user=ALuKL5oAAAAJ&hl=en">profile</a/>. -->
