--- a/pubs.html
+++ b/pubs.html
@@ -38,7 +38,8 @@
  arXiv:1909.03099, 2019. <br>
  </li>
  <li>
- <a href="https://arxiv.org/abs/2001.11580">Abductive Reasoning as Self-Supervision for Common Sense Question Answering</a>.<br>
+ <a href="https://arxiv.org/abs/2001.11580">Unsupervised Gaze Prediction in Egocentric Videos by Energy-based Surprise Modeling
+</a>.<br>
  Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
 	 arXiv:1909.03099, 2019. <a href="https://saakur.github.io/Projects/GazePrediction/">[Project Page]</a><br>
  </li>
