--- a/pubs.html
+++ b/pubs.html
@@ -44,6 +44,11 @@
 	 arXiv:1909.03099, 2019. <a href="https://saakur.github.io/Projects/GazePrediction/">[Project Page]</a><br>
  </li>
 
+<a href="#">Action Localization through Continual Predictive Learning</a>.<br>
+ Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
+	 arXiv:1909.03099, 2019. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
+ </li>
+
 </ul>
 <!-- My Google Scholar <a href="https://scholar.google.com/citations?user=ALuKL5oAAAAJ&hl=en">profile</a/>. -->
 </section>
