--- a/pubs.html
+++ b/pubs.html
@@ -46,7 +46,7 @@
 
 <a href="#">Action Localization through Continual Predictive Learning</a>.<br>
  Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
-	 arXiv:1909.03099, 2019. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
+	 arXiv, 2020. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
  </li>
 
 </ul>
