--- a/Projects/ActionLocalization/index.html
+++ b/Projects/ActionLocalization/index.html
@@ -254,6 +254,20 @@ We also present additional qualitative analysis of the proposed approach. We ana
         <li>Find training/evaluation code <a href="#"><b>here</b></a></li> 
       </ul>
     </div>
+    <div class="col-md-7">
+      <h2>Bibtex</h2>
+<pre style="font-size:12px;">
+@misc{aakur2020action,
+    title={Action Localization through Continual Predictive Learning},
+    author={Sathyanarayanan N. Aakur and Sudeep Sarkar},
+    year={2020},
+    eprint={2003.12185},
+    archivePrefix={arXiv},
+    primaryClass={cs.CV}
+}
+
+</pre>
+    </div>
   </div>
 </div>
 </div>
