--- a/pubs.html
+++ b/pubs.html
@@ -44,9 +44,9 @@
 	 arXiv:1909.03099, 2019. <a href="https://saakur.github.io/Projects/GazePrediction/">[Project Page]</a><br>
  </li>
 
-<a href="#">Action Localization through Continual Predictive Learning</a>.<br>
+<a href="https://arxiv.org/abs/2003.12185">Action Localization through Continual Predictive Learning</a>.<br>
  Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
-	 arXiv, 2020. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
+	 arXiv:2003.12185, 2020. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
  </li>
 
 </ul>
