--- a/Projects/ActionLocalization/index.html
+++ b/Projects/ActionLocalization/index.html
@@ -251,7 +251,8 @@ We also present additional qualitative analysis of the proposed approach. We ana
     <div class="col-md-5">
       <h2>Code, Paper and Extras</h2>
       <ul>
-        <li>Find training/evaluation code <a href="#"><b>here</b></a></li> 
+        <li>Find training/evaluation code on  <a href="#">Github</a> [COMING SOON!].</li>
+        <li>Find the paper <a href="https://arxiv.org/abs/2003.12185">here</a></li>
       </ul>
     </div>
     <div class="col-md-7">
