--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+	
 <!DOCTYPE html>
 <html lang="en"><head>
  <meta charset="utf-8">
@@ -156,9 +156,9 @@ I lead the Computer Vision and Understanding Lab</a>. Here are the current and p
 <h4>Students</h4>
 <ul>
  <li class="packed"><a href="#">Sanjoy Kundu</a>, PhD student (Spring 2020 &mdash; Present)</li> 
-  <li class="packed"><a href="#">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Present)</li> 
- <!-- <li class="packed"><a href="#">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
- <li class="packed"><a href="#">Setu Kumar Basak</a>, PhD student (Fall 2020 &mdash; Present)</li> -->
+  <li class="packed"><a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Present)</li> 
+ <li class="packed"><a href="#">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
+ <!-- <li class="packed"><a href="#">Setu Kumar Basak</a>, PhD student (Fall 2020 &mdash; Present)</li> -->
 </ul>
 
 
