--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
-  <dt>Spring'20</dt>
+  <dt>Spri<!-- ng'20</dt>
   <dd>
     Rated as an excellent reviewer for CVPR 2020!
-  </dd>
+  </dd> -->
   <dt>2019-2020:</dt>
   <dd>
     I will be on the Program Committee/Reviewer for WACV 2019, ICCV 2019, AAAI 2020, CVPR 2020, CRV 2020, ECCV 2020, NeurIPS 2020.
