--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
-  <dt>Spri<!-- ng'20</dt>
+  <!-- <dt>Spring'20</dt>
   <dd>
     Rated as an excellent reviewer for CVPR 2020!
   </dd> -->
