--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Email: saakurn -at- okstate.edu <br>
   </dd> -->
   <dt>2019-2020:</dt>
   <dd>
-    I will be on the Program Committee/Reviewer for WACV 2019, ICCV 2019, AAAI 2020, CVPR 2020, CRV 2020, ECCV 2020, NeurIPS 2020.
+    I will be on the Program Committee/Reviewer for WACV 2019, ICCV 2019, AAAI 2020, CVPR 2020, CRV 2020, ECCV 2020, NeurIPS 2020, WACV 2021.
   </dd>
 
   <dt>Fall '19:</dt>
