--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+	<dt>Spring'20</dt>
+  <dd>
+    Organizing a special session on "Machine Learning for Graphs" at <a href="https://www.icmla-conference.org/icmla20/index.html"> ICMLA'20 </a>. More details to follow!
+  </dd>
   <!-- <dt>Spring'20</dt>
   <dd>
     Rated as an excellent reviewer for CVPR 2020!
