--- a/index.html
+++ b/index.html
@@ -51,17 +51,21 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+  <dt>Summer'20</dt>
+  <dd>
+    Named Outstanding Reviewer at CVPR 2020!
+  </dd>
+  <dt>Summer'20</dt>
+  <dd>
+    Invited as reviewer for NeurIPS 2020, WACV 2021, ACCV 2020!
+  </dd>
 	<dt>Spring'20</dt>
   <dd>
     Organizing a special session on "Machine Learning for Graphs" at <a href="https://www.icmla-conference.org/icmla20/index.html"> ICMLA'20 </a>. More details to follow!
   </dd>
-  <!-- <dt>Spring'20</dt>
-  <dd>
-    Rated as an excellent reviewer for CVPR 2020!
-  </dd> -->
   <dt>2019-2020:</dt>
   <dd>
-    I will be on the Program Committee/Reviewer for WACV 2019, ICCV 2019, AAAI 2020, CVPR 2020, CRV 2020, ECCV 2020, NeurIPS 2020, WACV 2021.
+    I will be on the Program Committee/Reviewer for WACV 2019, ICCV 2019, AAAI 2020, CVPR 2020, CRV 2020, ECCV 2020.
   </dd>
 
   <dt>Fall '19:</dt>
