--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Email: saakurn -at- okstate.edu <br>
   </dd>
 	<dt>Spring'20</dt>
   <dd>
-    Organizing a special session on "Machine Learning for Graphs" at <a href="https://www.icmla-conference.org/icmla20/index.html"> ICMLA'20 </a>. More details to follow!
+    Organizing a special session on "Machine Learning for Graphs" at <a href="https://www.icmla-conference.org/icmla20/index.html"> ICMLA'20 </a>. <a href="https://sites.google.com/view/ml4graphs/"> Website </a> is now live!
   </dd>
   <dt>2019-2020:</dt>
   <dd>
