--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@ Email: saakurn -at- okstate.edu <br>
   <dd>
     One paper accepted at CVPR on Video Event Segmentation with Self-Supervised Learning.
   </dd>
-  <dt> Fall '18:</dt>
+  <!-- <dt> Fall '18:</dt>
   <dd>
     Paper on Open Domain Activity Interpretation accepted in Quarterly of Applied Mathematics.
   </dd>
   <dt> Fall '18:</dt>
   <dd>
     One paper accepted at WACV 2019 on Video Activity Interpretation using Commonsense Knowledge.
-  </dd>
+  </dd> -->
 </dl>
 
 <!-- <a href="news.html">Older items</a>. -->
