--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Summer'20</dt>
   <dd>
+    Awarded NSF Medium Proposal for Self-Supervised Event Understanding in Streaming Videos! It is a collaborative effort with <a href="https://ani.stat.fsu.edu/~anuj/"> Dr. Anuj Srivastava (Florida State University)</a> and <a href="https://www.cse.usf.edu/~sarkar/SudeepSarkar/About_Me.html"> Dr. Sudeep Sarkar (University of South Florida)</a>. More details to follow!
+  </dd>
+  <dt>Summer'20</dt>
+  <dd>
     Named Outstanding Reviewer at CVPR 2020!
   </dd>
   <dt>Summer'20</dt>
@@ -182,6 +186,7 @@ My group is supported by the following:
 <ul>
  <li class="packed"> OSU Core Facility Support Program with <a href="https://hpcc.okstate.edu/pratul_agarwal.html"> Pratul Agarwal </a></li>
   <li class="packed"> USDA NAHLN with <a href="http://nimffab.okstate.edu/faculty-and-staff/akhilesh-ramachandran"> Akhilesh Ramachandran </a> and <a href="https://arunkumar.okstate.edu/"> Arunkumar Bagavathi </a></li>
+  <li class="packed"> National Science Foundation </li>
 </ul>
 
 </section>
