--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Summer'20</dt>
   <dd>
-    Awarded NSF Medium Proposal for Self-Supervised Event Understanding in Streaming Videos! It is a collaborative effort with <a href="https://www.cse.usf.edu/~sarkar/SudeepSarkar/About_Me.html"> Dr. Sudeep Sarkar (University of South Florida)</a> and <a href="https://ani.stat.fsu.edu/~anuj/"> Dr. Anuj Srivastava (Florida State University)</a>. More details to follow!
+    Awarded NSF Medium Proposal for Self-Supervised Event Understanding in Streaming Videos! It is a collaborative effort with <a href="https://www.cse.usf.edu/~sarkar/SudeepSarkar/About_Me.html"> Dr. Sudeep Sarkar (USF)</a> and <a href="https://ani.stat.fsu.edu/~anuj/"> Dr. Anuj Srivastava (FSU)</a>. More details to follow!
   </dd>
   <dt>Summer'20</dt>
   <dd>
