--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+	<dt>Summer'20</dt>
+  <dd>
+    One paper accepted at ECCV 2020 on Self-supervised Action Localization with Continual Predictive Learning! More details to follow!
+  </dd>
   <dt>Summer'20</dt>
   <dd>
     Awarded NSF Medium Proposal for Self-Supervised Event Understanding in Streaming Videos! It is a collaborative effort with <a href="https://www.cse.usf.edu/~sarkar/SudeepSarkar/About_Me.html"> Dr. Sudeep Sarkar (USF)</a> and <a href="https://ani.stat.fsu.edu/~anuj/"> Dr. Anuj Srivastava (FSU)</a>. More details to follow!
