--- a/pubs.html
+++ b/pubs.html
@@ -43,11 +43,6 @@
  Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
 	 arXiv:1909.03099, 2019. <a href="https://saakur.github.io/Projects/GazePrediction/">[Project Page]</a><br>
  </li>
-<li>
-<a href="https://arxiv.org/abs/2003.12185">Action Localization through Continual Predictive Learning</a>.<br>
- Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
-	 arXiv:2003.12185, 2020. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
- </li>
 
 </ul>
 <!-- My Google Scholar <a href="https://scholar.google.com/citations?user=ALuKL5oAAAAJ&hl=en">profile</a/>. -->
@@ -57,6 +52,12 @@
 <section>
 	<h2 style="text-align: center">2020</h2>
 	<ul>
+
+		<li>
+		<a href="https://arxiv.org/abs/2003.12185">Action Localization through Continual Predictive Learning</a>.<br>
+		 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
+			 European Conference on Computer Vision, 2020. Accepted, to appear. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
+		 </li>
 
 		<li>
 		<a href="#">Dissecting Convolutional Neural Networks for Effi-cient Implementation on Constrained Platforms</a>.<br>
