--- a/pubs.html
+++ b/pubs.html
@@ -56,7 +56,7 @@
 		<li>
 		<a href="https://arxiv.org/abs/2003.12185">Action Localization through Continual Predictive Learning</a>.<br>
 		 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
-			 European Conference on Computer Vision, 2020. Accepted, to appear. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
+			 European Conference on Computer Vision (ECCV), 2020. Accepted, to appear. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
 		 </li>
 
 		<li>
