--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+  <dt>Summer'20</dt>
+  <dd>
+    Invited as reviewer for ICLR 2021.
+  </dd>
 	<dt>Summer'20</dt>
   <dd>
     One paper accepted at ECCV 2020 on Self-supervised Action Localization with Continual Predictive Learning! More details to follow!
