--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@ I lead the Computer Vision and Understanding Lab</a>. Here are the current and p
 <li class="packed"><a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Present)</li> 
  <li class="packed"><a href="#">Sanjoy Kundu</a>, PhD student (Spring 2020 &mdash; Present)</li> 
  <li class="packed"><a href="#">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
- <!-- <li class="packed"><a href="#">Setu Kumar Basak</a>, PhD student (Fall 2020 &mdash; Present)</li> -->
+ <li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (Fall 2020 &mdash; Present)</li>
+ <li class="packed"><a href="#">Vineela Indla</a>, MS student (Fall 2020 &mdash; Present)</li>
 </ul>
 
 
@@ -191,7 +192,7 @@ I lead the Computer Vision and Understanding Lab</a>. Here are the current and p
 <section>
 <h2 style="text-align: center">Funding</h2>
 <p>
-My group is supported by the following:
+Our research is supported by the following:
 </p>
 <ul>
  <li class="packed"> OSU Core Facility Support Program with <a href="https://hpcc.okstate.edu/pratul_agarwal.html"> Pratul Agarwal </a></li>
