--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Summer'20</dt>
   <dd>
-    Invited as reviewer for ICLR 2021.
+    Invited as reviewer for ICLR 2021, AAAI 2021.
   </dd>
 	<dt>Summer'20</dt>
   <dd>
