--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Email: saakurn -at- okstate.edu <br>
   </dd>
   <dt>Summer'20</dt>
   <dd>
-    Invited as reviewer for NeurIPS 2020, WACV 2021, ACCV 2020!
+    Invited as reviewer for NeurIPS 2020, WACV 2021, ACCV 2020, ICPR 2020!
   </dd>
 	<dt>Spring'20</dt>
   <dd>
