--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+  <dt>Fall'20</dt>
+  <dd>
+    Organizing the DEEP-DIAL Workshop at AAAI 2021 with Biplav Srivastava, Ullas Nambiar and Imed Zitouni! More details to follow!
+  </dd>
   <dt>Summer'20</dt>
   <dd>
     Invited as reviewer for ICLR 2021, AAAI 2021.
