--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Fall'20</dt>
   <dd>
+    One paper on Benchmarking Object Detection models on Resource Constrained Domains accepted at AIPR 2020! Congrats <a href=""> Sanjoy </a> and <a href=""> Nikhil </a>! Preprint coming soon!
+  </dd>
+  <dd>
     Organizing the DEEP-DIAL Workshop at AAAI 2021 with Biplav Srivastava, Ullas Nambiar and Imed Zitouni! More details to follow!
   </dd>
   <dt>Summer'20</dt>
