--- a/pubs.html
+++ b/pubs.html
@@ -52,7 +52,11 @@
 <section>
 	<h2 style="text-align: center">2020</h2>
 	<ul>
-
+		<li>
+			<a href="">Benchmark and Evaluation of Low Resource Object Detection in Biomedical Images</a>,<br>
+			Sanjoy Kundu*, Nikhil Gunti*, Bailey Hendrickson*, Sunil More, Sathyanarayanan Aakur <br>
+			IEEE Workshop on Applied Imagery and Pattern Recognition, 2020<br> [Preprint Coming Soon!]
+		</li>
 		<li>
 		<a href="https://arxiv.org/abs/2003.12185">Action Localization through Continual Predictive Learning</a>.<br>
 		 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
