--- a/pubs.html
+++ b/pubs.html
@@ -55,7 +55,7 @@
 		<li>
 			<a href="">Benchmark and Evaluation of Low Resource Object Detection in Biomedical Images</a>,<br>
 			Sanjoy Kundu*, Nikhil Gunti*, Bailey Hendrickson*, Sunil More, Sathyanarayanan Aakur <br>
-			IEEE Workshop on Applied Imagery and Pattern Recognition, 2020<br> [Preprint Coming Soon!]
+			IEEE Workshop on Applied Imagery and Pattern Recognition, 2020 [Preprint Coming Soon!] <br>
 		</li>
 		<li>
 		<a href="https://arxiv.org/abs/2003.12185">Action Localization through Continual Predictive Learning</a>.<br>
