--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ Email: saakurn -at- okstate.edu <br>
   <dd>
     One paper on Benchmarking Object Detection models on Resource Constrained Domains accepted at AIPR 2020! Congrats <a href=""> Sanjoy </a> and <a href=""> Nikhil </a>! Preprint coming soon!
   </dd>
+  <dt>Fall'20</dt>
   <dd>
     Organizing the DEEP-DIAL Workshop at AAAI 2021 with Biplav Srivastava, Ullas Nambiar and Imed Zitouni! More details to follow!
   </dd>
