--- a/group.html
+++ b/group.html
@@ -51,17 +51,17 @@
   </div>
 
   <div class="person">
-    <img src="./files/nikhil.jpeg" alt="thumb" />
+    <img src="./files/nikhil.jpg" alt="thumb" />
     <p>
       <a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>
       <br />
-      Master's Student (MIS) <br/>
+      Master's Student (BA&DS) <br/>
       (Fall 2019 - Present)
     </p>
   </div>
 
   <div class="person">
-    <img src="./files/sanjoy.png" alt="thumb" />
+    <img src="./files/Sanjoy1.png" alt="thumb" />
     <p>
       <a href="#">Sanjoy Kundu</a>
       <br />
@@ -71,7 +71,7 @@
   </div>
 
   <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
+    <img src="./files/shubham.png" alt="thumb" />
     <p>
       <a href="#">Shubham Trehan</a>
       <br />
@@ -89,7 +89,16 @@
       (Fall 2020 - Present)
     </p>
   </div>
-  
+
+  <div class="person">
+    <img src="./files/blank_w.jpg" alt="thumb" />
+    <p>
+      <a href="#">Vineela Indla</a>
+      <br />
+      M.S. (CS) Student <br/>
+      (Fall 2020 - Present)
+    </p>
+  </div>  
 </div>
 
 </section>
