--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ This entails developing approaches that do things such as:
 <h2 style="text-align: center">Group</h2>
 
 <p>
-I lead the Computer Vision and Understanding Lab</a>. Here are the current and past members:
+I lead the <a href="group.html">Computer Vision and Understanding Lab</a>. Here are the current and past members:
 </p>
 
 <h4>Students</h4>
@@ -193,6 +193,7 @@ I lead the Computer Vision and Understanding Lab</a>. Here are the current and p
  <li class="packed"><a href="#">Sanjoy Kundu</a>, PhD student (Spring 2020 &mdash; Present)</li> 
  <li class="packed"><a href="#">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
  <li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (Fall 2020 &mdash; Present)</li>
+ <li class="packed"><a href="#">Vineela Indla</a>, M.S. student (Fall 2020 &mdash; Present)</li>
  </ul>
 
 
