--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Email: saakurn -at- okstate.edu <br>
   </dd>
   <dt>Fall'20</dt>
   <dd>
-    Organizing the DEEP-DIAL Workshop at AAAI 2021 with Biplav Srivastava, Ullas Nambiar and Imed Zitouni! More details to follow!
+    Organizing the <a href="https://sites.google.com/view/deep-dial2021/">DEEP-DIAL Workshop at AAAI 2021</a> with Biplav Srivastava, Ullas Nambiar and Imed Zitouni! More details to follow!
   </dd>
   <dt>Summer'20</dt>
   <dd>
