--- a/pubs.html
+++ b/pubs.html
@@ -33,6 +33,11 @@
 <ul>
 
  <li>
+ <a href="https://arxiv.org/abs/2007.12791">Genome Sequence Classification for Animal Diagnostics with Graph Representations and Deep Neural Networks</a>.<br>
+ Sai Narayanan, Akhilesh Ramachandran, Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
+ arXiv:2007.12791, 2020. <br>
+ </li>
+ <li>
  <a href="https://arxiv.org/abs/1909.03099">Abductive Reasoning as Self-Supervision for Common Sense Question Answering</a>.<br>
  Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
  arXiv:1909.03099, 2019. <br>
