--- a/pubs.html
+++ b/pubs.html
@@ -31,7 +31,12 @@
 <section>
 <h2 style="text-align: center">Latest Preprints</h2>
 <ul>
-
+ <li>
+ <a href="https://arxiv.org/abs/2009.07470">Knowledge Guided Learning: Towards Open Domain Egocentric Action Recognition with Zero Supervision</a>.<br>
+ Sathyanarayanan N. Aakur, Sanjoy Kundu, Nikhil Gunti <br>
+ arXiv:2009.07470, 2020. <br>
+ 	
+ </li>
  <li>
  <a href="https://arxiv.org/abs/2007.12791">Genome Sequence Classification for Animal Diagnostics with Graph Representations and Deep Neural Networks</a>.<br>
  Sai Narayanan, Akhilesh Ramachandran, Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
