--- a/group.html
+++ b/group.html
@@ -99,6 +99,15 @@
       (Fall 2020 - Present)
     </p>
   </div>  
+  <div class="person">
+    <img src="./files/blank_w.jpg" alt="thumb" />
+    <p>
+      <a href="#">Makenzie Terrell</a>
+      <br />
+      B.S. (CS) Student <br/>
+      (Fall 2020 - Present)
+    </p>
+  </div>  
 </div>
 
 </section>
