--- a/group.html
+++ b/group.html
@@ -108,6 +108,15 @@
       (Fall 2020 - Present)
     </p>
   </div>  
+  <div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Udhav Ramachandran</a>
+      <br />
+      High School Research Intern <br/>
+      (Fall 2020 - Present)
+    </p>
+  </div>  
 </div>
 
 </section>
