--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Fall'20</dt>
   <dd>
+    One paper on Genome Sequence Classification for Animal Diagnostics with Deep Learning accepted at ICMLA 2020! Preprint can be found <a href="https://arxiv.org/abs/2007.12791">here</a>!
+  </dd>
+  <dt>Fall'20</dt>
+  <dd>
     One paper on Benchmarking Object Detection models on Resource Constrained Domains accepted at AIPR 2020! Congrats <a href=""> Sanjoy </a> and <a href=""> Nikhil</a>! Preprint coming soon!
   </dd>
   <dt>Fall'20</dt>
@@ -88,12 +92,13 @@ Email: saakurn -at- okstate.edu <br>
     I will be on the Program Committee/Reviewer for WACV 2019, ICCV 2019, AAAI 2020, CVPR 2020, CRV 2020, ECCV 2020.
   </dd>
 
+ <!-- 
   <dt>Fall '19:</dt>
   <dd>
     One paper accepted at VLSID 2020 on Dissecting CNNs for Implementation on Constrained Platforms.
   </dd>
  
- <!-- 
+
   <dt>Fall '19:</dt>
   <dd>
     One paper accepted at IFIP IoT on Latent Space modeling for PUF encrypted IoT Node security.
