--- a/pubs.html
+++ b/pubs.html
@@ -38,11 +38,6 @@
  	
  </li>
  <li>
- <a href="https://arxiv.org/abs/2007.12791">Genome Sequence Classification for Animal Diagnostics with Graph Representations and Deep Neural Networks</a>.<br>
- Sai Narayanan, Akhilesh Ramachandran, Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
- arXiv:2007.12791, 2020. <br>
- </li>
- <li>
  <a href="https://arxiv.org/abs/2001.11580">Unsupervised Gaze Prediction in Egocentric Videos by Energy-based Surprise Modeling
 </a>.<br>
  Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
@@ -63,6 +58,12 @@
 <section>
 	<h2 style="text-align: center">2020</h2>
 	<ul>
+		<li>
+			 <a href="https://arxiv.org/abs/2007.12791">Genome Sequence Classification for Animal Diagnostics with Graph Representations and Deep Neural Networks</a>.<br>
+			 Sai Narayanan, Akhilesh Ramachandran, Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
+			 International Conference on Machine Learning Applications (ICMLA'20) , 2020. <br>
+		 </li>
+		 
 		<li>
 			<a href="">Benchmark and Evaluation of Low Resource Object Detection in Biomedical Images</a>,<br>
 			Sanjoy Kundu*, Nikhil Gunti*, Bailey Hendrickson*, Sunil More, Sathyanarayanan Aakur <br>
