--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Fall'20</dt>
   <dd>
+    Invited as reviewer for CVPR 2021.
+  </dd>
+  <dt>Fall'20</dt>
+  <dd>
     One paper on Genome Sequence Classification for Animal Diagnostics with Deep Learning accepted at ICMLA 2020! Preprint can be found <a href="https://arxiv.org/abs/2007.12791">here</a>!
   </dd>
   <dt>Fall'20</dt>
