--- a/pubs.html
+++ b/pubs.html
@@ -59,7 +59,7 @@
 	<h2 style="text-align: center">2020</h2>
 	<ul>
 		<li>
-			 <a href="https://arxiv.org/abs/2007.12791">Genome Sequence Classification for Animal Diagnostics with Graph Representations and Deep Neural Networks</a>.<br>
+			 <a href="https://arxiv.org/abs/2007.12791">GRaDL: A Framework for Animal Genome Sequence Classification with Graph Representations and Deep Learning</a>.<br>
 			 Sai Narayanan, Akhilesh Ramachandran, Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
 			 International Conference on Machine Learning Applications (ICMLA'20) , 2020. <br>
 		 </li>
