--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Fall'20</dt>
   <dd>
+    One paper accepted at VISAPP 2021!
+  </dd>
+  <dt>Fall'20</dt>
+  <dd>
     Invited as reviewer for CVPR 2021.
   </dd>
   <dt>Fall'20</dt>
