--- a/pubs.html
+++ b/pubs.html
@@ -37,12 +37,7 @@
  arXiv:2009.07470, 2020. <br>
  	
  </li>
- <li>
- <a href="https://arxiv.org/abs/2001.11580">Unsupervised Gaze Prediction in Egocentric Videos by Energy-based Surprise Modeling
-</a>.<br>
- Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
-	 arXiv:2001.11580, 2020. <a href="https://saakur.github.io/Projects/GazePrediction/">[Project Page]</a><br>
- </li>
+
  <li>
  <a href="https://arxiv.org/abs/1909.03099">Abductive Reasoning as Self-Supervision for Common Sense Question Answering</a>.<br>
  Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
@@ -58,10 +53,20 @@
 <section>
 	<h2 style="text-align: center">2020</h2>
 	<ul>
+	
+		 <li>
+		 <a href="https://arxiv.org/abs/2001.11580">Unsupervised Gaze Prediction in Egocentric Videos by Energy-based Surprise Modeling
+		</a>.<br>
+		 Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
+			 International Conference on Computer Vision Theory and Applications (VISAPP), 2021. <a href="https://saakur.github.io/Projects/GazePrediction/">[Project Page]</a><br>
+		 </li>
+	</ul>
+	<h2 style="text-align: center">2020</h2>
+	<ul>
 		<li>
 			 <a href="https://arxiv.org/abs/2007.12791">GRaDL: A Framework for Animal Genome Sequence Classification with Graph Representations and Deep Learning</a>.<br>
 			 Sai Narayanan, Akhilesh Ramachandran, Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
-			 International Conference on Machine Learning Applications (ICMLA'20) , 2020. <br>
+			 International Conference on Machine Learning Applications (ICMLA'20), 2020. <br>
 		 </li>
 		 
 		<li>
