--- a/pubs.html
+++ b/pubs.html
@@ -61,6 +61,8 @@
 			 International Conference on Computer Vision Theory and Applications (VISAPP), 2021. <a href="https://saakur.github.io/Projects/GazePrediction/">[Project Page]</a><br>
 		 </li>
 	</ul>
+</section>
+<section>
 	<h2 style="text-align: center">2020</h2>
 	<ul>
 		<li>
