--- a/pubs.html
+++ b/pubs.html
@@ -83,7 +83,7 @@
 		 </li>
 
 		<li>
-		<a href="#">Dissecting Convolutional Neural Networks for Effi-cient Implementation on Constrained Platforms</a>.<br>
+		<a href="#">Dissecting Convolutional Neural Networks for Efficient Implementation on Constrained Platforms</a>.<br>
 		Vishalini R. Laguduva, Shakil Mahmud, Sathyanarayanan Aakur, Robert Karam, Srinivas Katkoori. <br>
 		IEEE International Conferenceon VLSI Design (VLSID), 2020.<br>
 		</li>
