--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Fall'20</dt>
   <dd>
-    One paper accepted at VISAPP 2021!
+    One paper on Unsupervised Gaze Prediction in Egocentric Videos with Pattern Theory has been accepted at VISAPP 2021! Initial preprint can be found <a href="https://arxiv.org/abs/2001.11580"> here</a>.
   </dd>
   <dt>Fall'20</dt>
   <dd>
