--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Fall'20</dt>
   <dd>
-    One paper on Unsupervised Gaze Prediction in Egocentric Videos with Pattern Theory has been accepted at VISAPP 2021! Initial preprint can be found <a href="https://arxiv.org/abs/2001.11580"> here</a>.
+    Invited as reviewer for CVPR 2021, ICML 2021.
   </dd>
   <dt>Fall'20</dt>
   <dd>
-    Invited as reviewer for CVPR 2021.
+    One paper on Unsupervised Gaze Prediction in Egocentric Videos with Pattern Theory has been accepted at VISAPP 2021! Initial preprint can be found <a href="https://arxiv.org/abs/2001.11580"> here</a>.
   </dd>
   <dt>Fall'20</dt>
   <dd>
