--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Fall'20</dt>
   <dd>
-    Invited as reviewer for CVPR 2021, ICML 2021, CRV 2021.
+    Invited as reviewer for CVPR 2021, ICML 2021, CRV 2021, ICCV 2021.
   </dd>
   <dt>Fall'20</dt>
   <dd>
