--- a/index.html
+++ b/index.html
@@ -204,11 +204,12 @@ I lead the <a href="group.html">Computer Vision and Understanding Lab</a>. Here 
 
 <h4>Students</h4>
 <ul>
-<li class="packed"><a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Present)</li> 
  <li class="packed"><a href="#">Sanjoy Kundu</a>, PhD student (Spring 2020 &mdash; Present)</li> 
  <li class="packed"><a href="#">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
  <li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (Fall 2020 &mdash; Present)</li>
+ <li class="packed"><a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Present)</li> 
  <li class="packed"><a href="#">Vineela Indla</a>, M.S. student (Fall 2020 &mdash; Present)</li>
+ <li class="packed"><a href="#">Makenzie Terrell</a>, B.S. student (Fall 2020 &mdash; Present)</li>
  </ul>
 
 
