--- a/Colloquium/index.html
+++ b/Colloquium/index.html
@@ -99,7 +99,7 @@
           </tr>
           <tr>
             <td>02/19/2021</td>
-            <td>TBA</td>
+            <td>Paycom</td>
             <td>TBA</td>
             <td>TBA</td>
           </tr>
