--- a/Colloquium/index.html
+++ b/Colloquium/index.html
@@ -53,11 +53,11 @@
   <div class="col-xs-12">
     <br />
     <p>
-      The Computer Science Colloquium is a weekly seminar series organized and conducted by the faculty and students from the Department of Computer Science at Oklahoma State University. It is intended to be a forum for the dissemination and discussion of topics in core computer science research such as software engineering, theoretical computer science, artificial intelligence, and cyber-physical systems, to name a few. 
+      The Computer Science Colloquium is a weekly seminar series organized and conducted by the faculty and students from the Department of Computer Science at Oklahoma State University. It is intended to be a forum for disseminating and discussing topics in core Computer Science research such as software engineering, theoretical computer science, artificial intelligence, and cyber-physical systems, to name a few. 
     </p>
 
     <p>
-      <b>Format:</b> Opportunities for researchers, particularly students and early career faculty, to present and share their current research interests with their peers, both in academia and the industry are becoming rare. This colloquium is designed as a platform for students, faculty and researchers in the industry alike to present and get quality feedback in a friendly-setting and help provide an opportunity to build up new collaborations and networking.
+      <b>Format:</b> Opportunities for researchers, particularly students and early career faculty, to present and share their current research interests with their peers, both in academia and the industry, are becoming rare. This colloquium is designed as a platform for students, faculty, and researchers in the industry to present and get quality feedback in a friendly-setting and help provide an opportunity to build up new collaborations and networking.
 
       Each session of the colloquium is set to be an hour, with talks ranging from 35-40 minutes and the remaining time dedicated for Q&A and discussions.
     </p>
