--- a/Colloquium/index.html
+++ b/Colloquium/index.html
@@ -104,9 +104,9 @@
           </tr>
           <tr>
             <td>02/26/2021</td>
-            <td>TBA</td>
-            <td>TBA</td>
-            <td>TBA</td>
+            <td></td>
+            <td>No Meeting</td>
+            <td></td>
           </tr>
           <tr>
             <td>03/05/2021</td>
@@ -128,9 +128,9 @@
           </tr>
           <tr>
             <td>03/26/2021</td>
-            <td>TBA</td>
-            <td>TBA</td>
-            <td>TBA</td>
+            <td></td>
+            <td>No Meeting</td>
+            <td></td>
           </tr>
           <tr>
             <td>04/02/2021</td>
@@ -155,6 +155,12 @@
             <td>TBA</td>
             <td>TBA</td>
             <td>TBA</td>
+          </tr>
+          <tr>
+            <td>04/30/2021</td>
+            <td></td>
+            <td>No Meeting</td>
+            <td></td>
           </tr>
         </tbody>
     </table>
