--- a/Colloquium/index.html
+++ b/Colloquium/index.html
@@ -122,7 +122,7 @@
           </tr>
           <tr>
             <td>03/19/2021</td>
-            <td>TBA</td>
+            <td>Dr. Pratul Agarwal</td>
             <td>TBA</td>
             <td>TBA</td>
           </tr>
