--- a/Colloquium/index.html
+++ b/Colloquium/index.html
@@ -123,7 +123,7 @@
           <tr>
             <td>03/19/2021</td>
             <td>Dr. Pratul Agarwal</td>
-            <td>TBA</td>
+            <td>Using Advances in Computing to Drive Rare-events Discovery in Biology at the Molecular Scale</td>
             <td>TBA</td>
           </tr>
           <tr>
