--- a/Colloquium/index.html
+++ b/Colloquium/index.html
@@ -146,7 +146,7 @@
           </tr>
           <tr>
             <td>04/16/2021</td>
-            <td>TBA</td>
+            <td>Dr. Shiekh Ariful Islam</td>
             <td>TBA</td>
             <td>TBA</td>
           </tr>
