--- a/Colloquium/index.html
+++ b/Colloquium/index.html
@@ -110,14 +110,14 @@
           </tr>
           <tr>
             <td>03/05/2021</td>
-            <td>TBA</td>
+            <td>Dr. Milka Doktorova</td>
             <td>TBA</td>
             <td>TBA</td>
           </tr>
           <tr>
             <td>03/12/2021</td>
-            <td>TBA</td>
-            <td>TBA</td>
+            <td>Dr. Avimanyu Sahoo</td>
+            <td>Resource Aware Adaptive Optimal Control of Nonlinear Systems using Real-time Machine Learning</td>
             <td>TBA</td>
           </tr>
           <tr>
@@ -140,7 +140,7 @@
           </tr>
           <tr>
             <td>04/09/2021</td>
-            <td>TBA</td>
+            <td>Dr. Elizabeth McCullagh</td>
             <td>TBA</td>
             <td>TBA</td>
           </tr>
